move beachballs, earthquakes to util/

--- a/src/htdocs/css/features/_index.scss
+++ b/src/htdocs/css/features/_index.scss
@@ -1,8 +1,8 @@
-@use 'beachballs';
-@use 'earthquakes';
 @use 'fieldnotes';
 @use 'forecast';
 @use 'mainshock';
 @use 'pager';
 @use 'shakemap-stations';
 @use 'significantEqs';
+@use 'util/beachballs';
+@use 'util/earthquakes';
