rename scss file

--- a/src/htdocs/css/features/_index.scss
+++ b/src/htdocs/css/features/_index.scss
@@ -2,7 +2,7 @@
 @use 'forecast';
 @use 'mainshock';
 @use 'pager';
-@use 'shakemap-stations';
+@use 'shakemapStations';
 @use 'significantEqs';
 @use 'util/beachballs';
 @use 'util/earthquakes';
