add ShakeAlert module

--- a/src/htdocs/css/features/_index.scss
+++ b/src/htdocs/css/features/_index.scss
@@ -2,6 +2,7 @@
 @use 'forecast';
 @use 'mainshock';
 @use 'pager';
+@use 'shakeAlert';
 @use 'shakemapStations';
 @use 'significantEqs';
 @use 'util/beachballs';
