organize css rules

--- a/src/htdocs/css/_lightbox.scss
+++ b/src/htdocs/css/_lightbox.scss
@@ -77,6 +77,26 @@
     right: -1.375rem;
     top: .125rem;
   }
+
+  .status {
+    margin: 1.5rem 0 0;
+
+    &:before {
+      @include labels;
+
+      content: 'Status';
+      margin-right: .5rem;
+    }
+
+    i {
+      margin-left: .25rem;
+    }
+
+    span { // nested (span) tag and inline-block are necessary for text-transform
+      display: inline-block;
+      text-transform: capitalize;
+    }
+  }
 }
 
 @media only screen
