--- a/src/htdocs/css/features/util/_maps.scss
+++ b/src/htdocs/css/features/util/_maps.scss
@@ -1,6 +1,6 @@
 @use '../../variables' as *;
 
-/* Lightboxes
+/* DYFI, ShakeMap Lightboxes
 --------------------------------------------- */
 
 #dyfi,
@@ -60,5 +60,15 @@
 
   .stations {
     margin-top: .5rem;
+  }
+}
+
+@media only screen
+and (max-width: 950px) {
+  #dyfi,
+  #shakemap {
+    .content {
+      flex-flow: row wrap;
+    }
   }
 }
