top-align, reduce size of trademark symbol

--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -65,6 +65,11 @@
     }
   }
 
+  sup {
+    font-size: .75em;
+    vertical-align: top; // ShakeAlert trademark
+  }
+
   ul {
     margin: 1px 0 0;
     padding: 0;
