add both row, col gap values

--- a/src/htdocs/css/features/util/_maps.scss
+++ b/src/htdocs/css/features/util/_maps.scss
@@ -38,7 +38,7 @@
   .content {
     align-items: flex-start;
     display: flex;
-    gap: 1.5rem;
+    gap: 2rem 1.5rem;
     position: relative;
   }
 
