--- a/src/htdocs/css/_lightbox.scss
+++ b/src/htdocs/css/_lightbox.scss
@@ -35,7 +35,9 @@
   }
 
   h3 {
+    align-items: center;
     background: $bg-color;
+    gap: 0 .5rem;
     margin: 0;
     padding: 1rem 0;
     position: sticky;
