set pointer to cursor for Lightbox click target

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -36,6 +36,10 @@
         padding-right: 1.25rem;
       }
 
+      &.feature {
+        cursor: pointer;
+      }
+
       > small,
       > span {
         white-space: nowrap;
