--- a/src/htdocs/css/leaflet/_overrides.scss
+++ b/src/htdocs/css/leaflet/_overrides.scss
@@ -1,7 +1,7 @@
 @use 'sass:color';
 
 @use '../mixins' as *;
-@use '../svgUrl' as *;
+@use '../functions' as *;
 @use '../variables' as *;
 
 $separator-color: color.scale($accent-color, $lightness: 80%);
