--- a/src/htdocs/css/features/_pager.scss
+++ b/src/htdocs/css/features/_pager.scss
@@ -1,52 +1,87 @@
+@use '../functions' as *;
 @use '../variables' as *;
+
+#pager {
+  h3 .impact-bubble {
+    width: 4.25rem;
+  }
+
+  img {
+    max-width: 100%;
+    width: calc(400px - rem-to-px(1));
+  }
+
+  p {
+    max-width: 1200px;
+  }
+
+  .exposure {
+    div {
+      align-items: flex-start;
+      display: flex;
+      flex-flow: row wrap;
+      gap: 1.5rem 2.5rem;
+    }
+
+    h4 {
+      margin: 0 0 1.25rem;
+    }
+
+    img {
+      margin-top: .5rem;
+    }
+
+    table {
+      width: calc(400px - rem-to-px(2));
+    }
+  }
+
+  .loss {
+    h4 {
+      margin: 1.5rem 0 0;
+    }
+  }
+
+  .wrapper {
+    display: flex;
+    flex-flow: row wrap;
+    gap: 2rem 1.5rem;
+
+    h4:first-child {
+      margin-top: .5rem;
+    }
+  }
+
+  @media only screen
+    and (max-width: 1327px) {
+      .exposure {
+        order: 1;
+      }
+      .loss {
+        order: 2;
+      }
+    }
+
+  @media only screen
+    and (max-width: 416px) {
+      .exposure table {
+        width: 100%;
+      }
+    }
+}
 
 #summaryPane {
   .pager-exposures {
     table {
-      margin: 1rem 0 0;
       width: 100%;
-    }
-
-    tbody tr {
-      border-bottom: none; // override general table border styles
-      border-top: 1px solid $border-color-lighter;
-
-      &.city {
-        border: none;
-      }
-
-      &:first-child {
-        border: none;
-      }
-    }
-
-    td,
-    th {
-      padding: 0.25rem .375rem;
-
-      &:nth-child(1) {
-        width: 3.5rem;
-        padding-left: .25rem;
-      }
-      &:nth-child(3) {
-        padding-right: .25rem;
-        text-align: right;
-      }
-    }
-    td {
-      font-weight: 500;
-    }
-
-    .city td {
-      color: $text-color-lighter;
-      font-weight: 400;
-      line-height: 1.4;
-      padding-bottom: .375rem;
-      padding-top: .125rem;
     }
   }
 
   .pager-loss {
+    &.bubble {
+      padding: 1rem .5rem;
+    }
+
     h4 {
       margin-bottom: 0;
 
@@ -58,9 +93,44 @@
     img {
       max-width: 100%;
     }
+  }
+}
 
-    &.bubble {
-      padding: 1rem .5rem;
+table.exposures {
+  margin: 0;
+
+  tbody tr {
+    border-bottom: none; // override general table border styles
+    border-top: 1px solid $border-color-lighter;
+
+    &.city,
+    &:first-child {
+      border: none;
     }
+  }
+
+  td,
+  th {
+    padding: 0.25rem .375rem;
+
+    &:nth-child(1) {
+      width: 3.5rem;
+      padding-left: .25rem;
+    }
+    &:nth-child(3) {
+      padding-right: .25rem;
+      text-align: right;
+    }
+  }
+  td {
+    font-weight: 500;
+  }
+
+  .city td {
+    color: $text-color-lighter;
+    font-weight: 400;
+    line-height: 1.4;
+    padding-bottom: .375rem;
+    padding-top: .125rem;
   }
 }
