--- a/src/htdocs/css/_lightbox.scss
+++ b/src/htdocs/css/_lightbox.scss
@@ -37,6 +37,7 @@
   h3 {
     align-items: center;
     background: $bg-color;
+    font-size: 1.625rem;
     gap: 0 .5rem;
     margin: 0;
     padding: 1rem 0;
@@ -46,6 +47,7 @@
   }
 
   h4 {
+    font-size: 1.375rem;
     margin: 1.75rem 0 .75rem;
   }
 
