set default <ul> padding

--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -169,6 +169,10 @@ tr {
   border-bottom: 1px solid $border-color-lighter;
 }
 
+ul {
+  padding: 0 0 0 1.75rem;
+}
+
 .bubble {
   background: $bg-color;
   border-radius: $content-border-radius;
