change Catalog Search feature’s id

--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -57,7 +57,7 @@
   .leaflet-fieldnotes-pane {
     z-index: 418;
   }
-  .leaflet-search-pane {
+  .leaflet-catalog-search-pane {
     z-index: 417;
   }
 
