--- a/src/htdocs/css/_controls.scss
+++ b/src/htdocs/css/_controls.scss
@@ -3,7 +3,7 @@
 @use 'variables' as *;
 
 $thumb-d: 1.25rem;
-$track-bg: $border-color;
+$track-bg: $control-color;
 $track-c: $accent-color;
 $track-h: .25rem;
 $track-w: 18rem;
