--- a/src/htdocs/css/_statusBar.scss
+++ b/src/htdocs/css/_statusBar.scss
@@ -51,7 +51,7 @@
   li { // error details
     color: #fff;
     display: inline;
-    font-size: .875rem;
+    font-size: $font-size-smaller;
     list-style: none;
     margin: 0;
     padding: 0;
