update @use paths

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -1,5 +1,5 @@
-@use '../mixins' as *;
-@use '../variables' as *;
+@use '../util/mixins' as *;
+@use '../util/variables' as *;
 
 #summaryPane {
   #download {
