--- a/src/htdocs/css/features/_pager.scss
+++ b/src/htdocs/css/features/_pager.scss
@@ -1,5 +1,5 @@
-@use '../functions' as *;
-@use '../variables' as *;
+@use '../util/functions' as *;
+@use '../util/variables' as *;
 
 #pager {
   h3 .impact-bubble {
