--- a/src/htdocs/css/util/controls/_controls.scss
+++ b/src/htdocs/css/util/controls/_controls.scss
@@ -1,6 +1,6 @@
 @use 'sass:color';
 
-@use 'variables' as *;
+@use '../variables' as *;
 
 /* Buttons
 --------------------------------------------- */
