--- a/src/htdocs/css/_impactBubbles.scss
+++ b/src/htdocs/css/_impactBubbles.scss
@@ -1,4 +1,4 @@
-@use 'variables' as *;
+@use 'util/variables' as *;
 
 @mixin hover {
   background-image: linear-gradient(0deg, rgba(0, 0, 0, .1) 0, transparent);
