--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -1,5 +1,5 @@
-@use 'mixins' as *;
-@use 'variables' as *;
+@use 'util/mixins' as *;
+@use 'util/variables' as *;
 
 #sideBar {
   background: $bg-color-alpha;
