--- a/src/htdocs/css/_summaryPane.scss
+++ b/src/htdocs/css/_summaryPane.scss
@@ -1,5 +1,5 @@
-@use 'mixins' as *;
-@use 'variables' as *;
+@use 'util/mixins' as *;
+@use 'util/variables' as *;
 
 #summaryPane {
   transition: margin $sidebar-toggle-duration ease;
