--- a/src/htdocs/css/leaflet/_overrides.scss
+++ b/src/htdocs/css/leaflet/_overrides.scss
@@ -1,8 +1,8 @@
 @use 'sass:color';
 
-@use '../mixins' as *;
-@use '../functions' as *;
-@use '../variables' as *;
+@use '../util/mixins' as *;
+@use '../util/functions' as *;
+@use '../util/variables' as *;
 
 $separator-color: color.scale($accent-color, $lightness: 80%);
 
