--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -164,6 +164,10 @@
         padding-right: 0;
       }
     }
+
+    .feature.hide { // missing product
+      display: none;
+    }
   }
 
   .notice {
