--- a/src/htdocs/css/_searchBar.scss
+++ b/src/htdocs/css/_searchBar.scss
@@ -10,7 +10,7 @@
   }
 
   p.note {
-    margin-top: 1.25rem;
+    margin-top: 1.5rem;
   }
 
   #endtime ~ .flatpickr-calendar {
@@ -25,7 +25,7 @@
   .dates {
     align-items: center;
     display: flex;
-    margin-top: 1rem;
+    margin-top: .5rem;
 
     label {
       margin-top: .25rem;
