--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -66,8 +66,8 @@
 
   .note {
     border-top: 1px solid $border-color-lighter;
-    margin: 2.5rem 0 0;
-    padding-top: .75rem;
+    margin: 2.75rem 0 0;
+    padding-top: 1rem;
   }
 }
 
