--- a/src/htdocs/css/features/_forecast.scss
+++ b/src/htdocs/css/features/_forecast.scss
@@ -8,8 +8,8 @@
       margin-bottom: 1.5rem;
     }
 
-    .hide {
-      display: none;
+    .model {
+      margin-top: .75rem;
     }
 
     .probabilities {
@@ -102,6 +102,10 @@
         margin: .75rem 0 1rem;
         padding: 0;
       }
+
+      .hide {
+        display: none;
+      }
     }
 
     .probability {
@@ -110,6 +114,16 @@
 
     .props {
       margin: .25rem 0 1.5rem;
+      max-height: 35rem;
+      opacity: 1;
+      overflow: hidden;
+      transition: all $effect-slide-duration ease-in-out;
+
+      &.hide {
+        margin: 0;
+        max-height: 0;
+        opacity: 0;
+      }
 
       dd {
         max-width: 7rem;
