--- a/src/htdocs/css/util/_mixins.scss
+++ b/src/htdocs/css/util/_mixins.scss
@@ -12,7 +12,7 @@
   right: 2px;
   top: 2px;
   text-align: center;
-  transition: all $effect-off-duration ease-in;
+  transition: all $effect-off-duration-shorter ease-in;
   width: 23px;
 
   &:hover {
