--- a/src/htdocs/css/_selectPane.scss
+++ b/src/htdocs/css/_selectPane.scss
@@ -10,7 +10,7 @@
   padding: var(--padding-header) 0 0;
   position: absolute;
   top: 0;
-  transition: padding $sidebar-toggle-duration ease;
+  transition: padding $effect-duration ease;
   width: 100%;
 
   h2 {
