--- a/src/htdocs/css/index.scss
+++ b/src/htdocs/css/index.scss
@@ -189,10 +189,9 @@ ul {
 }
 
 .count {
+  animation: opacify $effect-duration ease-out;
   font-size: .8em;
   margin-left: .3em;
-  opacity: 1;
-  transition: opacity .25s ease-out;
 
   &:after {
     content: ")";
@@ -292,5 +291,14 @@ ul {
     grid-column-start: 1;
     line-height: 27px; // accommodate smaller font-size of labels
     text-align: right;
+  }
+}
+
+@keyframes opacify {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
