disable count animation in layer control

--- a/src/htdocs/css/_mapPane.scss
+++ b/src/htdocs/css/_mapPane.scss
@@ -25,6 +25,10 @@
     display: none;
   }
 
+  .count {
+    animation: none; /* plays every time layer control is displayed */
+  }
+
   /**
    * Rendering order of Features on the map and layer controller. All overlays
    * are rendered in leaflet-overlay-pane which has a z-index of 400.
