--- a/src/htdocs/css/_searchBar.scss
+++ b/src/htdocs/css/_searchBar.scss
@@ -57,21 +57,26 @@
   }
 
   .option {
-    max-height: 20rem;
     opacity: 1;
-    transition: all $effect-slide-duration ease-in-out;
+    transition: $effect-slide-duration ease-in-out;
+    transition-property: max-height, opacity;
 
     &.customPeriod {
       max-height: 6rem;
     }
     &.customRegion {
-      overflow: hidden; // Note: breaks Flatpickr if applied to period option
+      max-height: 20rem;
+      overflow: hidden; // Note: breaks Flatpickr if applied to .customPeriod
     }
 
     &.hide {
       max-height: 0;
       opacity: 0;
-      visibility: hidden; // mitigates not setting overflow: hidden for period
+      visibility: hidden; // mitigates not setting overflow: hidden
+
+      &.customPeriod {
+        margin-top: -.5rem; // compensate for not setting overflow: hidden
+      }
     }
   }
 
