set text to darker color when :active

--- a/src/htdocs/css/_sideBar.scss
+++ b/src/htdocs/css/_sideBar.scss
@@ -38,6 +38,10 @@
     display: block;
     margin: 1.25rem 0 0;
     padding-bottom: .25rem;
+
+    &:active {
+      color: #444;
+    }
   }
 
   section.hide {
