hide empty bubble w/ no products

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -165,7 +165,8 @@
       }
     }
 
-    .feature.hide { // missing product
+    .bubble.hide,
+    .feature.hide { // missing product(s)
       display: none;
     }
   }
