add support for inline images in Tectonic Summary

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -195,6 +195,12 @@
           display: none;
         }
 
+        img {
+          display: block;
+          margin: 0 auto;
+          max-width: 100%;
+        }
+
         p:last-child {
           margin-bottom: .25rem;
         }
