--- a/src/htdocs/css/_icons.scss
+++ b/src/htdocs/css/_icons.scss
@@ -1,26 +1,16 @@
-// Icon font created at https://fontello.com on 2021-09-08
+// Icon font created at https://fontello.com on 2023-02-09
 
 @font-face {
   font-family: 'icons';
-  src: url('../font/icons.eot?68966375');
-  src: url('../font/icons.eot?68966375#iefix') format('embedded-opentype'),
-       url('../font/icons.woff2?68966375') format('woff2'),
-       url('../font/icons.woff?68966375') format('woff'),
-       url('../font/icons.ttf?68966375') format('truetype'),
-       url('../font/icons.svg?68966375#icons') format('svg');
+  src: url('../font/icons.eot?59672064');
+  src: url('../font/icons.eot?59672064#iefix') format('embedded-opentype'),
+       url('../font/icons.woff2?59672064') format('woff2'),
+       url('../font/icons.woff?59672064') format('woff'),
+       url('../font/icons.ttf?59672064') format('truetype'),
+       url('../font/icons.svg?59672064#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
-
-/* Chrome hack: SVG is rendered more smooth in Windozze. 100% magic, uncomment if you need it.
-   Note, that will break hinting! In other OS-es font will be not as sharp as it could be
-
-@media screen and (-webkit-min-device-pixel-ratio:0) {
-  @font-face {
-    font-family: 'icons';
-    src: url('../font/icons.svg?68966375#icons') format('svg');
-  }
-} */
 
 [class^="icon-"]:before, [class*=" icon-"]:before {
   font-family: "icons";
@@ -50,10 +40,14 @@
   // text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3);
 }
 
-.icon-check:before { content: '\e800'; }
-.icon-settingsBar:before { content: '\e801'; }
-.icon-searchBar:before { content: '\e802'; }
-.icon-legendBar:before { content: '\e803'; }
-.icon-selectBar:before { content: '\e804'; }
+.icon-check:before { content: '\e804'; }
+.icon-info:before { content: '\f129'; }
+.icon-legend:before { content: '\e802'; }
 .icon-link:before { content: '\f08e'; }
-.icon-infoBar:before { content: '\f129'; }
+.icon-menu:before { content: '\f0c9'; }
+.icon-next:before { content: '\e806'; }
+.icon-prev:before { content: '\e805'; }
+.icon-search:before { content: '\e801'; }
+.icon-select:before { content: '\e800'; }
+.icon-settings:before { content: '\e803'; }
+.icon-warning:before { content: '\e807'; }
