--- a/src/htdocs/css/util/_mixins.scss
+++ b/src/htdocs/css/util/_mixins.scss
@@ -31,3 +31,14 @@
   font: 700 .9375rem $font-family-headers;
   text-transform: uppercase;
 }
+
+@mixin opacify() {
+  @keyframes opacify {
+    0% {
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  }
+}
