use icon font for Shake Alert

--- a/src/htdocs/css/features/_mainshock.scss
+++ b/src/htdocs/css/features/_mainshock.scss
@@ -113,8 +113,9 @@
         line-height: 1;
       }
 
-      img {
-        width: 28px;
+      i {
+        color: #03865a;
+        font-size: 1.5rem;
       }
 
       small {
